addressing join_now/footer styling issues, re spacing

--- a/app/assets/stylesheets/footer.sass
+++ b/app/assets/stylesheets/footer.sass
@@ -15,8 +15,8 @@ footer
     color: color-gradient($PRIMARY_PURPLE, 120) !important
     a
       .logo_img
-        width: 150%
-        height: 150%
+        width: 100%
+        height: 100%
 
   .footer-mid
     float: left
