--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -37,7 +37,6 @@
   padding-left: 12px
 .join_now_home
   padding-top: 10px
-  padding-left: 20px
   font-size: 1.4em 
   p
     font-size: 14px !important
